[BERDA] main page header, side and main body page

--- a/examscheduler.client/src/RegisterPage.css
+++ b/examscheduler.client/src/RegisterPage.css
@@ -1,25 +1,4 @@
-﻿
-
-
-* {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* Elimină derularea */
-    display: flex;
-}
-
-/* Container principal */
+﻿/* Container principal */
 .register-container {
     display: grid; /* Activează grid-ul */
     grid-template-columns: repeat(5, 1fr); /* Creează 5 coloane egale */
