--- a/examscheduler.client/src/Layout/Header.css
+++ b/examscheduler.client/src/Layout/Header.css
@@ -1,6 +1,6 @@
 ﻿/* Header layout */
 .header {
-    height: 10%;
+    height: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,15 +22,18 @@
     flex-grow: 1;
     display: flex;
     justify-content: center;
+    align-content : center;
 }
 
 .search-bar {
     width: 100%;
+    height: 80%;
     max-width: 400px;
     padding: 8px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    align-content: center;
 }
 
 /* Right Section: Icons */
@@ -46,6 +49,7 @@
     font-size: 20px;
     cursor: pointer;
     position: relative;
+    height:100%;
 }
 
 /* Tooltip */
