--- a/examscheduler.client/src/Layout/Layout.css
+++ b/examscheduler.client/src/Layout/Layout.css
@@ -7,9 +7,11 @@
 .content {
     display: flex;
     flex: 1;
+    height: 10%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .main {
     flex-grow: 1;
-    padding: 10px;
 }
