--- a/examscheduler.client/src/index.css
+++ b/examscheduler.client/src/index.css
@@ -13,7 +13,7 @@
 
 * {
     width: 100%;
-    height: 100%;
+    height: 100%; /**/
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -26,7 +26,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden; /* Elimină derularea */
-    display: flex;
+    /*display: flex;*/
 }
 
 a {
@@ -41,8 +41,8 @@ a:hover {
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
+    /*display: flex;
+    place-items: center;*/
     min-width: 320px;
     min-height: 100vh;
 }
