--- a/examscheduler.client/src/Forms/ChangePasswordForm.css
+++ b/examscheduler.client/src/Forms/ChangePasswordForm.css
@@ -16,12 +16,8 @@
     .change-password-form div {
         display: flex;
         align-items: center;
-        /* justify-content: center; */
         width: 60%;
-        /* max-width: 400px; */
         gap: 10px;
-        /* align-content: space-between; */
-        /* flex-wrap: nowrap; */
         flex-direction: row;
     }
 
@@ -80,28 +76,25 @@
             transform: translateY(0px);
         }
 
-/* Success and error messages */
-.alert {
-    padding: 10px 15px;
-    border-radius: 4px;
+/* Base styles for messages */
+.message {
     font-size: 0.9rem;
     margin-bottom: 15px;
     display: inline-block;
-    width: 100%;
-    max-width: 400px;
-    box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    align-items: center;
+     justify-content: center;
+    gap: 0px;
+    margin: 0px;
 }
 
 /* Success message */
-.alert-success {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+.message-success {
+    color: #28a745; /* Green */
 }
 
 /* Error message */
-.alert-danger {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
+.message-error {
+    color: #dc3545; /* Red */
 }
