--- a/examscheduler.client/src/Components/Calendar/AddEventPopup.css
+++ b/examscheduler.client/src/Components/Calendar/AddEventPopup.css
@@ -18,7 +18,7 @@
     text-align: center;
 }
 
-input {
+.popup-input {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -26,7 +26,7 @@ input {
     border: 1px solid #ddd;
 }
 
-button {
+.popup-button {
     width: 100%;
     padding: 10px;
     background-color: #28a745;
@@ -35,6 +35,6 @@ button {
     cursor: pointer;
 }
 
-    button:hover {
+    .popup-button:hover {
         background-color: #218838;
     }
