--- a/examscheduler.client/src/Components/Calendar/DayDetail.css
+++ b/examscheduler.client/src/Components/Calendar/DayDetail.css
@@ -27,9 +27,9 @@
     box-sizing: border-box;
 }
 
-button {
+.add-event-button {
     background-color: #007bff;
-    color: white;
+    color: black;
     padding: 8px 15px;
     border: none;
     border-radius: 4px;
@@ -38,6 +38,6 @@ button {
     width: 100%;
 }
 
-    button:hover {
+    .add-event-button:hover {
         background-color: #0056b3;
     }
