--- a/examscheduler.client/src/Components/Calendar/AddEventPopup.css
+++ b/examscheduler.client/src/Components/Calendar/AddEventPopup.css
@@ -16,6 +16,12 @@
     border-radius: 8px;
     width: 300px;
     text-align: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .popup-input {
