--- a/examscheduler.client/src/Forms/FormStyles.css
+++ b/examscheduler.client/src/Forms/FormStyles.css
@@ -1,13 +1,21 @@
 /* The container that holds the form */
-.user-form-container {
+.form-container {
     position: relative; /* Position relative to the parent container */
     padding: 20px;
     max-width: 600px;
     margin: 0 auto; /* Centers the container horizontally */
 }
 
+.form-input-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
 /* The form itself */
-.user-form {
+.form {
     background: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -17,32 +25,34 @@
 }
 
     /* Basic form layout */
-    .user-form form {
+    .form form {
         display: flex;
         flex-direction: column;
         gap: 15px;
     }
 
     /* Styling for each input field */
-    .user-form label {
+    .form label {
         font-size: 1rem;
         font-weight: bold;
+        width: 30%;
     }
 
-    .user-form input, .user-form select {
+    .form input, .form select {
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 1rem;
+        width: 70%;
     }
 
-    .user-form .form-buttons {
+    .form .form-buttons {
         display: flex;
         gap: 10px;
         justify-content: flex-end;
     }
 
-        .user-form .form-buttons button {
+        .form .form-buttons button {
             padding: 10px 20px;
             background-color: #007bff;
             color: #fff;
@@ -51,15 +61,39 @@
             cursor: pointer;
         }
 
-            .user-form .form-buttons button[type="button"] {
+            .form .form-buttons button[type="button"] {
                 background-color: #6c757d;
             }
 
             /* Button hover effects */
-            .user-form .form-buttons button:hover {
+            .form .form-buttons button:hover {
                 background-color: #0056b3;
             }
 
-            .user-form .form-buttons button[type="button"]:hover {
+            .form .form-buttons button[type="button"]:hover {
                 background-color: #5a6268;
             }
+
+
+/* Base styles for messages */
+.message {
+    font-size: 0.9rem;
+    margin-bottom: 15px;
+    display: inline-block;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0px;
+    margin: 0px;
+}
+
+/* Success message */
+.message-success {
+    color: #28a745; /* Green */
+}
+
+/* Error message */
+.message-error {
+    color: #dc3545; /* Red */
+}
