--- a/examscheduler.client/src/Styles/ScheduleExamPage.css
+++ b/examscheduler.client/src/Styles/ScheduleExamPage.css
@@ -1,43 +1,13 @@
-﻿.schedule-exam-container {
-    color: #ffffff; /* Text alb */
-    background-color: #222222; /* Fundal închis */
+﻿/*.dashboard-body {
+    display: grid;*/ /* Activează Grid */
+    /*grid-template-columns: 1fr 1fr;*/ /* Două coloane de dimensiuni egale */
+    /*gap: 20px;*/ /* Spațiu între blocuri */
+    /*padding: 20px;
+}
+
+.block-item {
+    background-color: white;
     padding: 20px;
     border-radius: 8px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px; /* Spațiu între câmpuri */
-}
-
-input, button {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-button {
-    background-color: #4caf50; /* Verde */
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-    button:disabled {
-        background-color: #888; /* Gri pentru buton inactiv */
-        cursor: not-allowed;
-    }
-
-.scheduled-exams ul {
-    list-style: none;
-    padding: 0;
-}
-
-.scheduled-exams li {
-    background-color: #333;
-    padding: 10px;
-    margin: 5px 0;
-    border-radius: 4px;
-}
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}*/
